# cfa-config-generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test.ipynb
.github/scripts/: docker_build_and_push.sh
.github/workflows/: build-and-push.yaml  re-run-workload.yaml  run-workload.yaml  test.yaml  uv-run-workload.yaml
cli/: console.py
pipelines/epinow2/: generate_config.py  generate_config_local.py  generate_rerun_config.py
src/cfa_config_generator/cli/: console.py
src/cfa_config_generator/utils/azure/: auth.py  storage.py
src/cfa_config_generator/utils/epinow2/: constants.py  driver_functions.py  functions.py  functions_test.py
tests/: test_args.py  test_config_generation.py  test_exclusions.py  test_storage.py
utils/azure/: auth.py  storage.py
utils/cli/: functions.py
utils/epinow2/: constants.py  functions.py
