[tool.poetry]
name = "cfa-config-generator"
version = "0.1.0"
description = "Config generation tool for modeling pipelines."
authors = ["amondal2 <ab59@cdc.gov>"]
license = "ASL"
readme = "README.md"

packages = [
    { include = "cli" }
]

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob = "^12.23.1"
azure-identity = "^1.19.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
confmod = "cli.console:main"
