[project]
name = "cfa-config-generator"
version = "0.1.0"
description = "Config generation tool for modeling pipelines."
readme = "README.md"
authors = [
    { name = "Nate McIntosh", email = "NMcIntosh@cdc.gov" },
    { name = "amondal2", email = "ab59@cdc.gov" },
    { name = "Micah Wiesner", email = "zqm6@cdc.gov" }
]
requires-python = ">=3.13.2"
dependencies = [
    "azure-identity>=1.20.0",
    "azure-storage-blob>=12.24.1",
    "typer>=0.15.2",
]

[project.scripts]
confmod = "cli.console:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
